# invoiceque-ecosystem

./: .env.production.example  .gitignore  README.md  deploy.sh  docker-compose.yml  payload.json  render.yaml
api_gateway/: Dockerfile  fly.toml  go.mod  go.sum  main.go
api_gateway/config/: config.go
api_gateway/middleware/: auth.go  cors.go  logger.go  ratelimit.go  security.go
api_gateway/routes/: routes.go
frontend/AdminPanel-InvoiceQue/: Dockerfile  package-lock.json  package.json
frontend/InvoiceQue/: .dockerignore  .env.production  Dockerfile  fly.toml  next.config.ts  package-lock.json  package.json
infrastructure/postgres/: init.sql
render-monolith/: Cargo.toml  Dockerfile  render.yaml
render-monolith/src/: db.rs  error.rs  main.rs  middleware.rs  utils.rs
render-monolith/src/services/: auth.rs  client.rs  invoice.rs  notification.rs  payment.rs  subscription.rs
services/payment-service/: Cargo.toml  Dockerfile  fly.toml
services/payment-service/migrations/: 001_create_payment_links.sql  002_create_xendit_accounts.sql  003_add_payment_provider.sql
services/payment-service/src/: config.rs  db.rs  main.rs
services/payment-service/src/messaging/: publisher.rs
services/payment-service/src/models/: mod.rs  payment_link.rs  paypal_account.rs  xendit_account.rs
services/payment-service/src/repository/: mod.rs  payment_link_repo.rs  paypal_account_repo.rs  xendit_account_repo.rs
services/payment-service/src/routes/: mod.rs  payment_link.rs  paypal_account.rs  webhook.rs  xendit_account.rs
services/payment-service/src/services/: mod.rs  paypal.rs  xendit.rs
workers/monolith-api/: Cargo.toml  README.md  deploy.sh  wrangler.toml
workers/monolith-api/.wrangler/cache/: wrangler-account.json
workers/monolith-api/src/: db.rs  lib.rs  middleware.rs  utils.rs
workers/monolith-api/src/services/: auth.rs  client.rs  invoice.rs  mod.rs  notification.rs  payment.rs  subscription.rs
(+188 files in other folders)
