[package]
name = "invoicequ-monolith"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "invoicequ-monolith"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.15"
getrandom = "0.2"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
