[package]
name = "payment-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
lapin = "2"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
futures-lite = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hmac = "0.12"
sha2 = "0.10"
