[package]
name = "invoicequ-worker"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "js"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.15"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
